--- a/src/views/pages/malaysia/admin/forgotpass.html
+++ b/src/views/pages/malaysia/admin/forgotpass.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ms">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forgot Password</title>
+    <title>Lupa Kata Laluan</title>
 
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
@@ -40,25 +40,25 @@
             <div class="mb-10">
                 <img src="../../../../assets/images/logo.png" alt="Logo" class="inline-block align-middle mr-2 w-auto h-10">
             </div>
-            <h1 class="text-2xl md:text-4xl font-bold text-custom-teal-dark mb-4 leading-tight">Forgot Your Password?</h1>
-            <p class="text-gray-500 text-lg mb-8">Enter your email and we'll send you a link to reset your password.</p>
+            <h1 class="text-2xl md:text-4xl font-bold text-custom-teal-dark mb-4 leading-tight">Lupa Kata Laluan Anda?</h1>
+            <p class="text-gray-500 text-lg mb-8">Masukkan e-mel anda dan kami akan menghantar pautan untuk menetapkan semula kata laluan anda.</p>
 
             <form>
                 <div class="mb-6">
-                    <label for="email" class="sr-only">Email address</label>
+                    <label for="email" class="sr-only">Alamat e-mel</label>
                     <input type="email" id="email" class="w-full px-6 py-4 border border-gray-300 rounded-xl focus:outline-none focus:ring-2 focus:ring-custom-blue" placeholder="stanley@gmail.com">
                 </div>
                 
-                <button type="submit" class="w-full bg-custom-blue text-white py-4 rounded-xl text-xl font-semibold hover:bg-custom-teal transition duration-300">Send Reset Link</button>
+                <button type="submit" class="w-full bg-custom-blue text-white py-4 rounded-xl text-xl font-semibold hover:bg-custom-teal transition duration-300">Hantar Pautan Set Semula</button>
             </form>
 
             <div class="mt-8 text-center text-gray-500">
-                Remember your password? <a href="./login.html" class="text-custom-blue hover:underline">Login</a>
+                Ingat kata laluan anda? <a href="./login.html" class="text-custom-blue hover:underline">Log Masuk</a>
             </div>
         </div>
 
         <div class="hidden lg:flex w-1/2 custom-gradient-bg items-center justify-center relative rounded-r-3xl">
-            <img src="../../../../assets/images/ilustrasi-login.png" alt="Illustration" class="w-full h-full object-cover">
+            <img src="../../../../assets/images/ilustrasi-login.png" alt="Ilustrasi" class="w-full h-full object-cover">
         </div>
     </div>
 
