--- a/src/views/pages/plan.html
+++ b/src/views/pages/plan.html
@@ -55,14 +55,14 @@
                         
                         <div class="relative">
                             <button id="language-toggle" class="flex items-center text-gray-700 hover:text-custom-teal-dark">
-                                <span>Malay</span>
+                                <span>English</span>
                                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 ml-1" viewBox="0 0 20 20" fill="currentColor">
                                     <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd" />
                                 </svg>
                             </button>
                             <div id="language-menu" class="hidden absolute right-0 mt-2 w-40 bg-white rounded-xl shadow-xl z-20">
-                                <a href="#" class="block px-4 py-2 text-gray-800 hover:bg-white">Malay</a>
-                                <a href="#" class="block px-4 py-2 text-gray-800 hover:bg-white">English</a>
+                                <a href="./malaysia/plan.html" class="block px-4 py-2 text-gray-800 hover:bg-white">Malay</a>
+                                <a href="./plan.html" class="block px-4 py-2 text-gray-800 hover:bg-white">English</a>
                             </div>
                         </div>
                         
@@ -104,8 +104,8 @@
                     <div class="border-t border-gray-200 my-2"></div>
                     
                     <p class="px-3 pt-2 text-xs font-semibold text-gray-400 uppercase">Language</p>
-                    <a href="#" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-white hover:bg-custom-teal-dark">Malay</a>
-                    <a href="#" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-white hover:bg-custom-teal-dark">English</a>
+                    <a href="./malaysia/plan.html" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-white hover:bg-custom-teal-dark">Malay</a>
+                    <a href="./plan.html" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-white hover:bg-custom-teal-dark">English</a>
                     
                     <div class="border-t border-gray-200 my-2"></div>
 
