--- a/src/views/pages/malaysia/newregiatration.html
+++ b/src/views/pages/malaysia/newregiatration.html
@@ -316,88 +316,88 @@
             </header>
 
             <main class="p-4 sm:p-6 lg:p-8">
-                <div class="mb-8">
-                    <h1 class="text-2xl md:text-3xl font-bold text-gray-800">Register</h1>
-                    <p class="text-sm text-gray-500 mt-1">Home - Register</p>
-                </div>
-                <div class="bg-white p-6 rounded-lg shadow-md">
-                    <form action="#" method="POST">
-                        <div class="mb-6">
-                            <label for="reference_by" class="block text-sm font-medium text-gray-700">Reference By</label>
-                            <input type="text" id="reference_by" name="reference_by" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm py-2 px-3 focus:ring-custom-teal focus:border-custom-teal sm:text-sm" placeholder="admin">
+            <div class="mb-8">
+                <h1 class="text-2xl md:text-3xl font-bold text-gray-800">Daftar</h1>
+                <p class="text-sm text-gray-500 mt-1">Laman Utama - Daftar</p>
+            </div>
+            <div class="bg-white p-6 rounded-lg shadow-md">
+                <form action="#" method="POST">
+                    <div class="mb-6">
+                        <label for="reference_by" class="block text-sm font-medium text-gray-700">Rujukan Oleh</label>
+                        <input type="text" id="reference_by" name="reference_by" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm py-2 px-3 focus:ring-custom-teal focus:border-custom-teal sm:text-sm" placeholder="admin">
+                    </div>
+
+                    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                        <div>
+                            <label for="username" class="block text-sm font-medium text-gray-700">
+                                Nama Pengguna
+                                <span class="text-red-500">*</span>
+                            </label>
+                            <input type="text" name="username" id="username" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm py-2 px-3 focus:ring-custom-teal focus:border-custom-teal sm:text-sm" placeholder="Nama Pengguna">
                         </div>
 
-                        <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                            <div>
-                                <label for="username" class="block text-sm font-medium text-gray-700">
-                                    Username
-                                    <span class="text-red-500">*</span>
-                                </label>
-                                <input type="text" name="username" id="username" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm py-2 px-3 focus:ring-custom-teal focus:border-custom-teal sm:text-sm" placeholder="Username">
-                            </div>
+                        <div>
+                            <label for="email" class="block text-sm font-medium text-gray-700">
+                                Alamat E-mel
+                                <span class="text-red-500">*</span>
+                            </label>
+                            <input type="email" name="email" id="email" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm py-2 px-3 focus:ring-custom-teal focus:border-custom-teal sm:text-sm" placeholder="Alamat E-mel">
+                        </div>
 
-                            <div>
-                                <label for="email" class="block text-sm font-medium text-gray-700">
-                                    E-mail Adress
-                                    <span class="text-red-500">*</span>
-                                </label>
-                                <input type="email" name="email" id="email" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm py-2 px-3 focus:ring-custom-teal focus:border-custom-teal sm:text-sm" placeholder="Email Adress">
-                            </div>
-
-                            <div>
-                                <label for="country" class="block text-sm font-medium text-gray-700">Country</label>
-                                <select id="country" name="country" class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-custom-teal focus:border-custom-teal sm:text-sm">
-                                    <option>Indonesian</option>
-                                    <option>Malaysian</option>
-                                </select>
-                            </div>
-                            
-                            <div>
-                                <label for="mobile_phone" class="block text-sm font-medium text-gray-700">Mobile Phone</label>
-                                <div class="mt-1 flex rounded-md shadow-sm">
-                                    <span id="country-code" class="inline-flex items-center px-3 rounded-l-md border border-r-0 border-gray-300 bg-gray-50 text-gray-500 sm:text-sm">+62</span>
-                                    <input type="tel" name="mobile_phone" id="mobile_phone" class="flex-1 block w-full rounded-none rounded-r-md border-gray-300 py-2 px-3 focus:ring-custom-teal focus:border-custom-teal sm:text-sm" placeholder="Your Phone Number">
-                                </div>
-                            </div>
-                            
-                            <div>
-                                <label for="password" class="block text-sm font-medium text-gray-700">
-                                    Password
-                                    <span class="text-red-500">*</span>
-                                </label>
-                                <input type="password" name="password" id="password" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm py-2 px-3 focus:ring-custom-teal focus:border-custom-teal sm:text-sm" placeholder="Enter Password">
-                            </div>
-
-                            <div>
-                                <label for="confirm_password" class="block text-sm font-medium text-gray-700">
-                                    Confirm Password
-                                    <span class="text-red-500">*</span>
-                                </label>
-                                <input type="password" name="confirm_password" id="confirm_password" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm py-2 px-3 focus:ring-custom-teal focus:border-custom-teal sm:text-sm" placeholder="Confirm Password">
+                        <div>
+                            <label for="country" class="block text-sm font-medium text-gray-700">Negara</label>
+                            <select id="country" name="country" class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-custom-teal focus:border-custom-teal sm:text-sm">
+                                <option>Indonesia</option>
+                                <option>Malaysia</option>
+                            </select>
+                        </div>
+                        
+                        <div>
+                            <label for="mobile_phone" class="block text-sm font-medium text-gray-700">Telefon Bimbit</label>
+                            <div class="mt-1 flex rounded-md shadow-sm">
+                                <span id="country-code" class="inline-flex items-center px-3 rounded-l-md border border-r-0 border-gray-300 bg-gray-50 text-gray-500 sm:text-sm">+62</span>
+                                <input type="tel" name="mobile_phone" id="mobile_phone" class="flex-1 block w-full rounded-none rounded-r-md border-gray-300 py-2 px-3 focus:ring-custom-teal focus:border-custom-teal sm:text-sm" placeholder="Nombor Telefon Anda">
                             </div>
                         </div>
                         
-                        <div class="mt-6 flex items-start">
-                            <div class="flex items-center h-5">
-                                <input id="agree" name="agree" type="checkbox" class="focus:ring-custom-teal h-4 w-4 text-custom-teal border-gray-300 rounded">
-                            </div>
-                            <div class="ml-3 text-sm">
-                                <label for="agree" class="font-medium text-gray-700">I agree with <a href="#" class="text-custom-pink hover:underline">Privacy Policy</a> . <a href="#" class="text-custom-pink hover:underline">Terms of Service</a></label>
-                            </div>
+                        <div>
+                            <label for="password" class="block text-sm font-medium text-gray-700">
+                                Kata Laluan
+                                <span class="text-red-500">*</span>
+                            </label>
+                            <input type="password" name="password" id="password" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm py-2 px-3 focus:ring-custom-teal focus:border-custom-teal sm:text-sm" placeholder="Masukkan Kata Laluan">
                         </div>
 
-                        <div class="mt-2 text-center text-sm text-gray-600">
-                        Already Have an Account? <a href="#" class="font-medium text-custom-pink hover:underline">Sign In</a>
+                        <div>
+                            <label for="confirm_password" class="block text-sm font-medium text-gray-700">
+                                Sahkan Kata Laluan
+                                <span class="text-red-500">*</span>
+                            </label>
+                            <input type="password" name="confirm_password" id="confirm_password" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm py-2 px-3 focus:ring-custom-teal focus:border-custom-teal sm:text-sm" placeholder="Sahkan Kata Laluan">
                         </div>
-                        
-                        <div class="mt-6">
-                            <button type="submit" class="w-full flex justify-center py-3 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-custom-teal-dark hover:bg-custom-teal focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-custom-teal">
-                                Create Account
-                            </button>
+                    </div>
+                    
+                    <div class="mt-6 flex items-start">
+                        <div class="flex items-center h-5">
+                            <input id="agree" name="agree" type="checkbox" class="focus:ring-custom-teal h-4 w-4 text-custom-teal border-gray-300 rounded">
                         </div>
-                    </form>
-                </div>
-            </main>
+                        <div class="ml-3 text-sm">
+                            <label for="agree" class="font-medium text-gray-700">Saya bersetuju dengan <a href="#" class="text-custom-pink hover:underline">Dasar Privasi</a> . <a href="#" class="text-custom-pink hover:underline">Syarat Perkhidmatan</a></label>
+                        </div>
+                    </div>
+
+                    <div class="mt-2 text-center text-sm text-gray-600">
+                        Sudah Mempunyai Akaun? <a href="#" class="font-medium text-custom-pink hover:underline">Log Masuk</a>
+                    </div>
+                    
+                    <div class="mt-6">
+                        <button type="submit" class="w-full flex justify-center py-3 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-custom-teal-dark hover:bg-custom-teal focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-custom-teal">
+                            Cipta Akaun
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </main>
 
     </div>
 <script>
